Fixed whitespace on footer; removed Patreon from all socials temporarily

--- a/public/css/footer.scss
+++ b/public/css/footer.scss
@@ -6,7 +6,7 @@
 #real-footer {
     width: 100% !important;
     background-color: $primary;
-    padding-bottom: 1%;
+    padding-bottom: 2%;
     margin: 0 !important;
 }
 
@@ -79,10 +79,10 @@
 
     @media screen and (max-width: 767px) {
         margin-left: 10%;
+        margin-top: 9%;
     }
     @media screen and (max-width: 575px) {
         margin-left: 3%;
-        margin-top: 7%;
         margin-bottom: 8%;
     }
 }
